[gd_scene load_steps=11 format=2]

[ext_resource path="res://tiles/spelunky_shop.png" type="Texture" id=1]
[ext_resource path="res://tiles/Overworld.png" type="Texture" id=2]
[ext_resource path="res://tiles/Tile.gd" type="Script" id=3]
[ext_resource path="res://tiles/Dark_Bricks_tileset.png" type="Texture" id=4]
[ext_resource path="res://tiles/Stone_tileset.png" type="Texture" id=5]
[ext_resource path="res://common/LabelBar.tscn" type="PackedScene" id=6]

[sub_resource type="TileSet" id=1]
0/name = "spelunky_shop.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 48, 48, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=3]
0/name = "Dark_Bricks_tileset.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 48, 32, 32 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Stone_tileset.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 176, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "grass"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 12 )

[node name="Tile" type="Area2D" groups=["highlightable"]]
script = ExtResource( 3 )

[node name="Gold" type="TileMap" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Heal" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="Scorached" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="Wall" type="TileMap" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
tile_set = SubResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Floor" type="TileMap" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 12, 12 )
shape = SubResource( 5 )

[node name="highlight" type="Polygon2D" parent="."]
visible = false
color = Color( 0, 0.0627451, 1, 0.588235 )
polygon = PoolVector2Array( 0, 0, 0, 24, 24, 24, 24, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="LabelBar" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( 24, 24 )
scale = Vector2( 0.7, 0.7 )
z_index = 1

[connection signal="input_event" from="." to="." method="_on_Tile_input_event"]
[connection signal="timeout" from="Heal" to="." method="_on_Heal_timeout"]
[connection signal="timeout" from="Scorached" to="." method="endtimeout"]
